--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-add-module-exports": "^1.0.4",
     "browser-sync": "^2.27.10",
-    "choices.js": "^10.1.0",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -25,27 +24,23 @@
     "gulp-concat": "^2.6.1",
     "gulp-convert-encoding": "^2.1.0",
     "gulp-debug": "^4.0.0",
-    "gulp-imagemin": "^8.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^4.0.0",
     "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-sass": "^5.1.0",
-    "multipipe": "^4.0.0",
+    "imagemin-gifsicle": "^6.0.1",
     "sass": "^1.54.5",
-    "tippy.js": "^6.3.7",
     "webpack": "^5.74.0",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
-    "animate.css": "^4.1.1",
-    "animejs": "^3.2.1",
     "flickity": "^3.0.0",
     "flickity-fade": "^2.0.0",
-    "nib": "^1.2.0",
-    "normalize.css": "^8.0.1",
-    "wow.js": "^1.2.2"
+    "multipipe": "^4.0.0",
+    "normalize.css": "^8.0.1"
   }
 }
