--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
     "flickity": "^3.0.0",
+    "flickity-fade": "^2.0.0",
+    "jquery": "^3.6.1",
     "multipipe": "^4.0.0",
     "normalize.css": "^8.0.1"
   }
